--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "use-count-up": "^3.0.1",
     "web-vitals": "^2.1.4"
